<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DangNhapActivity">

    <TextView
        android:id="@+id/txtdangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/ng_nh_p"
        android:textColor="@color/colortext"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtdangnhap">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:drawableLeft="@drawable/icon_email_24"
            android:drawablePadding="10dp"
            android:hint="Email" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/line1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/icon_key_24"
            android:drawablePadding="10dp"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btndangnhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_button"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="55dp"
        android:text="Đăng nhập"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtdangnhap">

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="25dp"
        android:text="@string/n_u_ch_a_c_t_i_kho_n"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btndangnhap" />

    <TextView
        android:id="@+id/txtdangki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="36dp"
        android:text="Đăng kí"
        android:textColor="#C11B1B"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/btndangnhap" />

</androidx.constraintlayout.widget.ConstraintLayout>